@@ -1,3 +1,9 @@
+* Wed Feb 13 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 7.0.1-0
+- Use Simplib::Port data type in lieu of deprecated, simplib
+  Puppet 3 validate_port()
+- Use new Vnc::Geometry data type in lieu of deprecated,
+  stdlib validate_re()
+
 * Thu Nov 01 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 7.0.0-0
 - Update the contribution guide URL in the README.md
 
